Fixing #22 : Adding section-content with some margin to preserve spacing between heading and content

--- a/public/templates/template-1/css/main.css
+++ b/public/templates/template-1/css/main.css
@@ -47,6 +47,9 @@ body {
   margin: 0;
   padding-bottom: 20px; }
 
+.section-content {
+  margin-top: 35px; }
+
 .box {
   margin-right: 15px;
   margin-left: 15px;
