--- a/public/templates/template-1/sass/components/_components.scss
+++ b/public/templates/template-1/sass/components/_components.scss
@@ -12,6 +12,9 @@
   margin: 0;
   padding-bottom: 20px;
 }
+.section-content {
+  margin-top: 35px;
+}
 .box {
   margin-right: 15px;
   margin-left: 15px;
